--- a/list.css
+++ b/list.css
@@ -2,11 +2,17 @@ input:focus,
 button:focus{
    outline:none
 }
+body{
+    background-color:black;
+    color:white;
+}
 input{    
     height:20px; 
+    background-color:black;
+    color:white;
 }
 .field{
-    width:275px;
+    width:95%;
     display: inline-block;
     border:none;
 }
@@ -24,27 +30,27 @@ input{
     
 }
 .textbox{
-    width:300px;
+    width:95%;
     height:25px;
     padding:5px;
     padding-left: 20px;
-    border: 5px solid #68F0C2;
+    border: 5px solid #423AA6;
     vertical-align: middle;
     border-radius:0px 0px 10px 10px;   
 }
 .circle{
     height:25px;
     width:25px;
-    background-color:#69D994;
+    background-color:#423AA6;
     border-radius:25px;
     display:inline-block;
     position:absolute;   
 }
 #content-frame{
-    height: 290px;
-    width: 290px;
-    border: 5px solid #68F0C2;
-    border-radius: 10px 10px 0px 0px;
+    height:800px;
+    width: 94%;
+    border: 0px solid #423AA6;
+    border-radius: 15px 15px 15px 15px;
     padding:15px;
     padding-left:10px;
     padding-right:25px;
@@ -57,13 +63,14 @@ input{
     margin-right: auto;
 }
 .menu{
-    width:350px;
+    width:100%;
+    height:100%;
 }
 .frameitem{
-    width:250px;
+    width:70%;
     height:25px;
-    background-color:#68F076;
-    border: 1px solid #68F076;
+    background-color:#3A3E8F;
+    border: 1px solid #3A3E8F;
     border-radius:5px;
     margin:5px;
     color:white;
@@ -74,14 +81,15 @@ input{
 }
 ::-webkit-scrollbar {
     width: 12px;
+    
 }
  
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,150,0,5); 
+    border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,150,0,5); 
 }
