--- a/list.css
+++ b/list.css
@@ -12,16 +12,16 @@ input{
     color:white;
 }
 .field{
-    width:95%;
+    width:90%;
     display: inline-block;
     border:none;
 }
 .framebutton{
     width:100px;
     height:30px;
-    background-color:#64E5DF;
-    border: 1px solid #64E5DF;
-    border-radius:5px;
+    background-color:#38529C;
+    border: 1px solid #38529C;
+    
     
     margin:1px;
     margin-top:5px;
@@ -47,9 +47,9 @@ input{
     position:absolute;   
 }
 #content-frame{
-    height:800px;
+    height:500px;
     width: 90%;
-    border: 1px solid #423AA6;
+    border: 0px solid #423AA6;
     border-radius: 15px 15px 15px 15px;
     padding:15px;
     padding-left:10px;
@@ -67,8 +67,8 @@ input{
     height:100%;
 }
 .frameitem{
-    width:80%;
-    height:25px;
+    width:85%;
+    height:30px;
     background-color:#3A3E8F;
     border: 1px solid #3A3E8F;
     border-radius:5px;
