--- a/list.css
+++ b/list.css
@@ -1,93 +1,134 @@
-input:focus,
-button:focus{
-   outline:none
-}
-body{
-    background-color:black;
-    color:white;
-}
-input{    
-    height:20px; 
-    background-color:black;
-    color:white;
-}
-.field{
-    width:78%;
-    display: inline-block;
-    border:none;
-}
-.framebutton{
-    width:100px;
-    height:30px;
-    background-color:#38529C;
-    border: 1px solid #38529C;
-    
-    
-    margin:1px;
-    margin-top:5px;
-    color:white;
-    font-size:20px;
-    
-}
-.textbox{
-    width:90%;
-    height:25px;
-    padding:5px;
-    padding-left: 20px;
-    border: 5px solid #423AA6;
-    vertical-align: middle;
-    border-radius:0px 0px 10px 10px;   
-}
-.circle{
-    height:25px;
-    width:25px;
-    background-color:#423AA6;
-    border-radius:25px;
-    display:inline-block;
-    position:absolute;  
-    left:80%;  
-    color:white;
-}
-.circle2{
-    height:25px;
-    width:25px;
-    background-color:red;
-    border-radius:25px;
-    display:inline-block;
-    position:absolute; 
-    left:88%;  
-    color:white;
-}
-#content-frame{
-    
-    width: 90%;
-    border: 0px solid #423AA6;
-    border-radius: 15px 15px 15px 15px;
-    padding:15px;
-    padding-left:10px;
-    padding-right:25px;
-    margin-top:10px;
-    overflow-y: scroll;
-}
-.options{
-    width:325px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.menu{
-    width:100%;
-    height:100%;
-}
-.frameitem{
-    width:85%;
-    height:30px;
-    background-color:#3A3E8F;
-    border: 1px solid #3A3E8F;
-    border-radius:5px;
-    margin:5px;
-    color:white;
-    font-size:18px;
-    padding:5px;
-    padding-left:10px;
-    
-}
+                                                    input:focus,
+                                                    button:focus {
+                                                        outline: none
+                                                    }
+                                                    
+                                                    body {
+                                                        background-color: #FCE374;
+                                                    }
+                                                    
+                                                    input {
+                                                        height: 20px;
+                                                        background-color: black;
+                                                        color: black;
+                                                        font-size: 25px;
+                                                    }
+                                                    
+                                                    .field {
+                                                        width: 78%;
+                                                        display: inline-block;
+                                                        border: none;
+                                                        background-color: #FCE374;
+                                                        border-bottom: 5px solid white;
+                                                    }
+                                                    
+                                                    .framebutton {
+                                                        width: 100px;
+                                                        height: 30px;
+                                                        background-color: #38529C;
+                                                        border: 1px solid #38529C;
+                                                        margin: 1px;
+                                                        margin-top: 5px;
+                                                        color: white;
+                                                        font-size: 20px;
+                                                    }
+                                                    
+                                                    .textbox {
+                                                        width: 90%;
+                                                        vertical-align: middle;
+                                                    }
+                                                    
+                                                    .circle {
+                                                        height: 25px;
+                                                        width: 25px;
+                                                        background-color: #423AA6;
+                                                        border-radius: 25px;
+                                                        display: inline-block;
+                                                        position: absolute;
+                                                        left: 80%;
+                                                        color: white;
+                                                    }
+                                                    
+                                                    .circle2 {
+                                                        height: 25px;
+                                                        width: 25px;
+                                                        background-color: red;
+                                                        border-radius: 25px;
+                                                        display: inline-block;
+                                                        position: absolute;
+                                                        left: 88%;
+                                                        color: white;
+                                                    }
+                                                    
+                                                    #content-frame {
+                                                        width: 90%;
+                                                        border: 0px solid #423AA6;
+                                                        border-radius: 15px 15px 15px 15px;
+                                                        padding: 15px;
+                                                        padding-left: 10px;
+                                                        padding-right: 25px;
+                                                        margin-top: 10px;
+                                                        overflow-y: scroll;
+                                                    }
+                                                    
+                                                    .options {
+                                                        width: 325px;
+                                                        margin-left: auto;
+                                                        margin-right: auto;
+                                                    }
+                                                    
+                                                    .menu {
+                                                        width: 100%;
+                                                        height: 100%;
+                                                    }
+                                                    
+                                                    .frameitem {
+                                                        display: inline-block;
+                                                        border: 1px solid #bfbfbf;
+                                                        color: black;
+                                                        border-radius: 5px 5px 5px 5px;
+                                                        -webkit-border-radius: 5px 5px 5px 5px;
+                                                        -moz-border-radius: 5px 5px 5px 5px;
+                                                        font-family: Verdana;
+                                                        width: 80%;
+                                                        height: 30px;
+                                                        font-size: 16px;
+                                                        padding: 10px 40px;
+                                                        box-shadow: inset 0 1px 0 0 #fff, inset 0 -1px 0 0 #d9d9d9, inset 0 0 0 1px #f2f2f2, 0 2px 4px 0 #f2f2f2;
+                                                        -moz-box-shadow: inset 0 1px 0 0 #fff, inset 0 -1px 0 0 #d9d9d9, inset 0 0 0 1px #f2f2f2, 0 2px 4px 0 #f2f2f2;
+                                                        -webkit-box-shadow: inset 0 1px 0 0 #fff, inset 0 -1px 0 0 #d9d9d9, inset 0 0 0 1px #f2f2f2, 0 2px 4px 0 #f2f2f2;
+                                                        text-shadow: 0 1px 0 #fff;
+                                                        background-image: linear-gradient(to top, #f2f2f2, #f2f2f2);
+                                                        background-color: #f2f2f2;
+                                                        margin-top: 5px;
+                                                    }
+                                                    
+                                                    .btn {
+                                                        display: inline-block;
+                                                        border: 1px solid #c9ae34;
+                                                        color: #705D07;
+                                                        border-radius: 50px 50px 50px 50px;
+                                                        -webkit-border-radius: 50px 50px 50px 50px;
+                                                        -moz-border-radius: 50px 50px 50px 50px;
+                                                        font-family: Verdana;
+                                                        width: 53px;
+                                                        height: 48px;
+                                                        font-size: 17px;
+                                                        padding: 0px 0px;
+                                                        box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d, 0 2px 4px 0 #D4D4D4;
+                                                        -moz-box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d, 0 2px 4px 0 #D4D4D4;
+                                                        -webkit-box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d, 0 2px 4px 0 #D4D4D4;
+                                                        text-shadow: 0 1px 0 #fff;
+                                                        background-image: linear-gradient(to top, #fce374, #fcdf5b);
+                                                        background-color: #fce374;
+                                                    }
+                                                    
+                                                    .btn:hover,
+                                                    .btn:active {
+                                                        border: 1px solid #967d09;
+                                                        color: #705D07;
+                                                        box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d;
+                                                        -moz-box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d;
+                                                        -webkit-box-shadow: inset 0 1px 0 0 #fff6ce, inset 0 -1px 0 0 #e3c852, inset 0 0 0 1px #fce88d;
+                                                        background-color: #fcdf5b;
+                                                    }
