--- a/list.css
+++ b/list.css
@@ -15,7 +15,7 @@
                                                     }
                                                     
                                                     .field {
-                                                        width: 45%;
+                                                        width: 80%;
                                                         display: inline-block;
                                                         border: none;
                                                         background: none;
@@ -26,6 +26,9 @@
                                                     .textbox {
                                                         width: 90%;
                                                         vertical-align: middle;
+                                                        margin: 2.5px;
+                                                        margin-left: auto;
+                                                        margin-right: auto;
                                                     }
                                                     
                                                     #content-frame {
@@ -35,18 +38,19 @@
                                                         padding: 15px;
                                                         padding-left: 10px;
                                                         padding-right: 25px;
-                                                        margin-top: 140px;
+                                                        margin-top: 190px;
                                                         overflow-y: scroll;
                                                     }
                                                     
                                                     .menu {
                                                         width: 100%;
-                                                        height: 150px;
+                                                        height: 180px;
                                                         position: fixed;
                                                         top: 0;
                                                         left: 0;
                                                         background-image: url("Menu-pic.jpg");
                                                         border-bottom: 0px solid black;
+                                                        box-shadow: 10px 10px 5px #888888;
                                                     }
                                                     
                                                     .frameitem {
