--- a/notie.css
+++ b/notie.css
@@ -6,7 +6,6 @@
     }
     
     .textbox {
-        width: 50%;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 10px;
@@ -21,7 +20,7 @@
     .frame {
         display: inline-block;
         text-shadow: 0 1px 0 #48576D;
-        min-width: 220px;
+        min-width: 45%;
         Width: auto;
         height: 200px;
         font-family: Verdana;
