--- a/notie.css
+++ b/notie.css
@@ -12,7 +12,7 @@
     }
     
     .textbox input {
-        width: 96%;
+        width: 90%;
         height: 25px;
         margin: 5px;
         border-radius: 20px;
@@ -29,8 +29,7 @@
         height: 200px;
         font-family: Verdana;
         background-color: #FCFAF9;
-        background-image: linear-gradient(to right, #FCFCFC, #E2FCCC);
-        border-radius: 25px 25px 0px 0px;
+        background-image: linear-gradient(to right, #FCFCFC, #A1FCEA);
         color: black;
         margin: 5px;
     }
@@ -39,7 +38,6 @@
         width: 90%;
         padding: 5%;
         background-color: #f2f2f2;
-        border-radius: 25px 25px 0px 0px;
         font-size: 16px;
     }
     
